oidc-auth/network/http-route-cloud.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: auth-cloud
  namespace: auth
  labels:
    app: auth
spec:
  parentRefs:
  - name: auth-gateway-cloud
    namespace: auth
  hostnames:
  - auth-local.kubefrog.fr
  rules:
  - backendRefs:
    - name: keycloak
      port: 80
