oidc-auth/network/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: auth-cloud
  namespace: auth
  labels:
    app: auth
spec:
  parentRefs:
  - name: auth-gateway-cloud
    namespace: auth
  hostnames:
  - auth-kvm.kubefrog.fr
  rules:
  - backendRefs:
    - name: keycloak-service
      port: 9000
