oidc-auth/network/oauth2-proxy-signout-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: oauth2-proxy-logout
  namespace: auth
  labels:
    app: oauth2-proxy
spec:
  gateways:
  - kubeflow/kubeflow-gateway
  hosts:
  - kubeflow.kubefrog.ai
  http:
  - match:
    - uri:
        prefix: /oauth2/sign_out
    route:
    - destination:
        host: oauth2-proxy.auth.svc.cluster.local
        port:
          number: 4180
    headers:
      request:
        set:
          X-Auth-Request-Redirect: https://auth-kvm.kubefrog.fr/realms/kubeflow/protocol/openid-connect/logout

# X-Auth-Request-Redirect: https://auth.82.66.198.32.nip.io/realms/kubeflow/protocol/openid-connect/logout?post_logout_redirect_uri=https%%3A%%2F%%2Fkubeflow.82.66.198.32.nip.io
